# ymerge

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  PKGBUILD  README.md
docs/: README.md
man/: ymerge.1.pod
src/: ymerge.cpp
src/auracle/: README.md  auracle_main.cc
src/auracle/aur/: aur.hh  request.hh
src/auracle/auracle/: auracle.cc  auracle.hh  format.cc  format.hh  package_cache.cc  package_cache.hh  pacman.cc  pacman.hh  search_fragment.cc  search_fragment.hh  terminal.hh
src/libauracle/: dbg.h
src/libauracle/alpm/: alpm.cpp  alpm.hpp
src/libauracle/aur/: aur.cc  aur.hh  json_internal.hh  package.hh  request.cc  request.hh  response.hh
src/libauracle/auracle/: auracle.cc  dependency_kind.cc  dependency_kind.hh  format.cc  format.hh  pacman.cc  pacman.hh  sort.hh
src/libymerge/: cfg.cpp  log.hpp  pkgbuild.cpp  srcinfo.hpp  sync.cpp  ymerge.cpp  ymerge.hpp  ymerge_c.cpp  ymerge_c.h  ymerge_repo.hpp
src/yman/: main.cpp  yman.cpp
src/ymerge/: cfg.cpp  cfg.hpp  config.cpp  config.hpp  handle_exceptions.cpp  log.hpp  nspawn.cpp  nspawn.hpp  pkgbuild.cpp  pkgbuild.hpp  repo.cpp  repo.hpp  sigint.cpp  srcinfo.cpp  srcinfo.hpp  sync.cpp  sync.hpp  ymerge.cpp  ymerge.hpp  ymerge_c.cpp  ymerge_c.h  ymerge_main.cpp  ymerge_main.hpp  ymerge_repo.cpp  ymerge_repo.hpp
src/youtil/: cmd.cpp  cmd.hpp  create_temporary_directory.cpp  create_temporary_directory.hpp  create_temporary_file.cpp  create_temporary_file.hpp  file_contents.cpp  file_contents.hpp  file_util.cpp  file_util.hpp  string_util.cpp  string_util.hpp  unique_list.hpp  xdgdirs.c  xdgdirs.h  xresult.hpp
